--- a/EOSExt.LevelSpawnedSentry.csproj
+++ b/EOSExt.LevelSpawnedSentry.csproj
@@ -39,6 +39,7 @@
     <Compile Include="LSS.Static.cs" />
     <Compile Include="LSSComp.cs" />
     <Compile Include="Patches\DisableAnalytic.cs" />
+    <Compile Include="Patches\DisableWarp.cs" />
     <Compile Include="Patches\OnLSSSpawned.cs" />
     <Compile Include="Patches\OnSetup.cs" />
     <Compile Include="Patches\Targeting.cs" />
