--- a/EOSExt.LevelSpawnedSentry.csproj
+++ b/EOSExt.LevelSpawnedSentry.csproj
@@ -34,16 +34,22 @@
     <Compile Include="EntryPoint.cs" />
     <Compile Include="GlobalSuppressions.cs" />
     <Compile Include="LevelSpawnedSentryManager.WardenEvents.cs" />
-    <Compile Include="LSS.ColorNText.cs" />
-    <Compile Include="LSS.cs" />
-    <Compile Include="LSS.Static.cs" />
-    <Compile Include="LSSComp.cs" />
+    <Compile Include="Impl\LSS.ColorNText.cs" />
+    <Compile Include="Impl\LSS.cs" />
+    <Compile Include="Impl\LSS.Static.cs" />
+    <Compile Include="Impl\LSS.Sync.cs" />
+    <Compile Include="Impl\LSS.Sync.Old.cs" />
+    <Compile Include="Impl\LSS.Sync.Static.cs" />
+    <Compile Include="Impl\LSSComp.cs" />
+    <Compile Include="Impl\LSSTargeted.cs" />
     <Compile Include="Patches\DisableAnalytic.cs" />
     <Compile Include="Patches\DisableWarp.cs" />
     <Compile Include="Patches\OnLSSSpawned.cs" />
     <Compile Include="Patches\OnSetup.cs" />
     <Compile Include="Patches\OnPlayerGuiLayerSetup.cs" />
-    <Compile Include="Patches\Targeting.cs" />
+    <Compile Include="Patches\Targeting.Client.cs" />
+    <Compile Include="Patches\Targeting.Common.cs" />
+    <Compile Include="Patches\Targeting.Detection.cs" />
     <Compile Include="PlayerGUIMessage\PlayerGUIMessageManager.cs" />
   </ItemGroup>
   <ItemGroup>
